<resources>
    <!-- ***************************************************************************** -->

    <!-- Имя приложения -->
    <string name="app_name" translatable="false">Squid Game mod for MinecraftPE</string>

    <!-- Ключи для рекламы -->
    <string name="key_banner" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="key_add_open" translatable="false">ca-app-pub-3940256099942544/3419835294</string>
    <string name="key_interstitial" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="key_reward" translatable="false">ca-app-pub-3940256099942544/5224354917</string>

    <!--    Название файла, будет отображаться у юзера при скачивании-->
    <string name="file_name" translatable="false">File name</string>
    <!-- Ссылка для загрузки мода. Берём её в Firebase -->
    <string name="download_link" translatable="false">https://1drv.ms/u/s!AiW9rR1zMXcBdwUE9aEiL-PkUhU?e=bne5NH</string>

    <!-- AdMob id приложения -->
    <string name="admob_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>


    <!-- ***************************************************************************** -->

    <!-- Сообщения об ошибке -->
    <string name="toast_failed_show_ad">Чтобы загрузить мод, сначала посмотри видео, нажав на DOWNLOAD!</string>
    <string name="invalid_link">Что-то пошло не так.</string>
    <string name="no_mods">Ждите в ближайшее время.</string>
    <string name="no_connection">Чтобы загрузить мод, включи интернет соединение!</string>

    <!-- Тексты -->
    <string name="guide_text">
        Привет!\n\n
        Данный раздел не описывает функции данного приложения, а описывает только инструкцию по тому, как установить мод (который ты можешь скачать в нашем приложении) в игру Minecraft PE, которая должна быть установлена у тебя на устройстве.\n\n
        Цель инструкции - помочь тебе в установке мода в игру Minecraft PE, которая является отдельным приложением от нашего приложения.\n\n
        <b>Инструкция по установке модов на MCPE</b>\n
        1. Скачай файл мода.\n
        Информацию о том, как скачать мод, ты сможешь найти нажав на кнопку “INFO”, в главном меню приложения.\n
        2. Найди его в загрузках своего устройства и нажмите.\n
        3. Игра будет автоматически запущена и начнется процесс импорта.\n
        4. Включи мод в редактировании мира.\n
        5. Готово!\n\n
        <b>Установка модов с расширением .mcpack</b>\n
        1. Скачай на своё устройство мод с расширением .mcpack\n
        2. Если у тебя уже установлен MCPE, то просто найди файл мода и запустите его.\n
        3. После нажатия игра автоматически будет запущена и начнётся импорт мода.\n
        4. После успешного импорта всех частей мода перейди в редактирование мира и в разделе Наборы ресурсов или Наборы параметров активируй мод.\n
        5. Активация в Наборы ресурсов или Наборы параметров зависит от типа мода, при этом файлов может быть несколько.\n
        6. Если для работы мода необходимо включить функции экспериментов, то сделай это.\n
        7. После успешной активации ты можешь запустить мир и наслаждаться установленным модом!\n\n
        <b>Установка модов с расширением .mcaddon</b>\n
        1. Скачай на своё устройство мод с расширением .mcaddon\n
        2. Если у тебя уже установлен MCPE, то просто найди мод и запустите его.\n
        3. Игра автоматически будет запущена и начнётся импорт.\n
        4. После успешного импорта всех частей мода перейди в редактирование мира и в разделах Наборы ресурсов и Наборы параметров активируй все части мода.\n
        5. При необходимости включи функции экспериментов, необходимые для работы мода.\n
        6. Теперь ты можешь запустить мир и наслаждаться установленным дополнением!\n
    </string>

    <string name="info_text_part_one">
        Привет!\n\
        В этом приложении ты сможешь скачать мод на MCPE, чтобы сделать процесс игры еще более интересным и динамичным.\n\n
        Чтобы увидеть все моды нашей студии разработки, нажми на кнопку “ALL MODS” в главном меню.
    </string>

    <string name="info_text_part_two">
        Чтобы скачать мод на MCPE:\n\n
        1. Нажми на кнопку “DOWNLOAD”, в главном меню;\n
        2. Скачай мод, нажав на кнопку “DOWNLOAD” (ты перейдешь на Google Disk, на котором храниться мод, для скачивания);\n
        3. Установи мод, согласно инструкции, которую ты найдешь нажав кнопку “GUIDE”, в главном меню.\n\n
        Теперь ты можешь запустить мир и наслаждаться установленным дополнением!
    </string>

    <string name="download_text">
        Привет!\n\n
        В этом разделе, ты сможешь скачать мод на MCPE, на свое устройство.\n\n
        Чтобы скачать мод, нажми на кнопку “DOWNLOAD” (тебе нужно будет посмотреть рекламу и ты перейдешь на DropBox, на котором храниться мод, для скачивания).\n\n
        Ты можешь посмотреть детальную информацию, нажав на кнопку “GUIDE”, в главном меню приложения.
    </string>

    <string name="all_mods">
        Привет!\n\n
        В этом разделе, ты найдешь все моды нашей студии разработки, которые ты можешь установить себе на MCPE.\n\n
        При нажатии на иконку любого из модов, ты перейдешь на наш магазин разработчика Play Market, для его загрузки.\n\n
        Выбирай и скачивай!
    </string>

    <!--  Описание картинок -->
    <string name="description_of_logo">Logotype "GO Games Studio"</string>
    <string name="description_of_btn_info">Button "Information"</string>
    <string name="description_of_btn_guide">Button "Guide"</string>
    <string name="description_of_btn_download">Button "Download"</string>
    <string name="description_of_btn_video">Button "Screen"</string>
    <string name="description_of_screen">Screen</string>
    <string name="description_of_btn_all_mods">All mods button</string>
    <string name="image_mod_desc">Mod icon</string>

    <!--  Ключи рекламы для тестирования -->
    <string name="test_key_banner" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="test_key_add_open" translatable="false">ca-app-pub-3940256099942544/3419835294</string>
    <string name="test_key_interstitial" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="test_key_reward" translatable="false">ca-app-pub-3940256099942544/5224354917</string>
    <string name="test_admob_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>

    <string name="file_was_downloaded">Файл успешно загружен</string>
    <string name="open_folder">Открыть папку</string>
    <string name="provide_permission">Пожалуйста, дайте разрешение на скачивание файла</string>
    <string name="downloading">Загрузка</string>
    <string name="error">Ошибка скачивания файла. Пожалуйста, попробуйте ещё раз</string>
    <string name="yes">Да</string>
    <string name="cancel">Отмена</string>
    <string name="watch_ad_reward_confirmation">Вы хотите посмотреть рекламу, чтобы получить доступ к скачиванию файлов мода?</string>
    <string name="confirm">Потвердите действие</string>
</resources>